--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,3 +1,11 @@
+# Launcher Window
+launcherWindow.Title=Darts Trainingsspiel - Launcher
+# Texts
+launcherWindow.text.title=Darts Trainingsspiel
+launcherWindow.text.duration=Dauer:
+# Buttons
+launcherWindow.button.challengeMode=Herausforderungsmodus
+launcherWindow.button.endlessMode=Endloser Modus
 # Main Window
 mainWindow.Title=Trainingsspiel - Main
 # Text Fields
@@ -22,3 +30,5 @@ sError.numberPrompt.amount=Anzahl an Triple-Treffern überprüfen!
 # Major Errors
 mError.numberPrompt.initialisation=E: Ziffer Eingabe konnte nicht initialisiert werden
 mError.numberPrompt.open=E: Ziffer Eingabe konnte nicht geöffnet werden
+# Fatal Errors
+fError.launcherWindow.resetFailed=F: Launcher-Fenster konnte nicht aktualisiert werden
