Small optimisations/fixes
* added "Darts" to window titles
* key "stout" to "stdOut"
* changed exit message for german language
* cleaner programm exit in `GameController`
- removed unnecessary code from `NumberPrompt`
- condensed somewhat duplicate error messages

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -7,7 +7,7 @@ launcherWindow.text.duration=Dauer:
 launcherWindow.button.challengeMode=Herausforderungsmodus
 launcherWindow.button.endlessMode=Endloser Modus
 # Main Window
-mainWindow.Title=Trainingsspiel - Main
+mainWindow.Title=Darts Trainingsspiel - Main
 # Text Fields
 mainWindow.textField.lost=Verloren
 # Buttons
@@ -17,18 +17,17 @@ mainWindow.button.oneHit=Ein Treffer
 mainWindow.button.twoHits=Zwei Treffer
 mainWindow.button.threeHits=Drei Treffer
 # Number Prompt Window
-numberPromptWindow.Title=Trainingsspiel - Ziffer Eingabe
+numberPromptWindow.Title=Darts Trainingsspiel - Ziffer Eingabe
 numberPromptWindow.textField.amount=Anzahl an Triple-Treffern:
 # Keywords
 kw.score=Punktestand
 kw.highscore=Rekord
 # StdOut messages
-stdout.exit=I: Schließe Spiel!
-stdout.reset=I: Setze Spiel zurück!
+stdOut.exit=I: Verlasse!
+stdOut.reset=I: Setze Spiel zurück!
 # Small Errors
 sError.numberPrompt.amount=Anzahl an Triple-Treffern überprüfen!
 # Major Errors
-mError.numberPrompt.initialisation=E: Ziffer Eingabe konnte nicht initialisiert werden
 mError.numberPrompt.open=E: Ziffer Eingabe konnte nicht geöffnet werden
 # Fatal Errors
 fError.launcherWindow.resetFailed=F: Launcher-Fenster konnte nicht aktualisiert werden
