--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,8 +1,10 @@
+version=3.0-pre1.2
 # Launcher Window
 launcherWindow.Title=Darts Trainingsspiel - Launcher
 # Texts
 launcherWindow.text.title=Darts Trainingsspiel
 launcherWindow.text.duration=Dauer:
+launcherWindow.text.languageSelection=Sprachauswahl
 # Buttons
 launcherWindow.button.challengeMode=Herausforderungsmodus
 launcherWindow.button.endlessMode=Endloser Modus
