--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,15 +1,16 @@
+projectName=Darts Trainingsspiel
 version=3.0-pre1.2
 # Launcher Window
-launcherWindow.Title=Darts Trainingsspiel - Launcher
+launcherWindow.Title=\ - Launcher
 # Texts
-launcherWindow.text.title=Darts Trainingsspiel
+launcherWindow.text.title=Darts Trainingsspiel - Launcher
 launcherWindow.text.duration=Dauer:
 launcherWindow.text.languageSelection=Sprachauswahl
 # Buttons
 launcherWindow.button.challengeMode=Herausforderungsmodus
 launcherWindow.button.endlessMode=Endloser Modus
 # Main Window
-mainWindow.Title=Darts Trainingsspiel - Main
+gameWindow.Title=\ - Main
 # Text Fields
 mainWindow.textField.lost=Verloren
 # Buttons
@@ -19,7 +20,7 @@ mainWindow.button.oneHit=Ein Treffer
 mainWindow.button.twoHits=Zwei Treffer
 mainWindow.button.threeHits=Drei Treffer
 # Number Prompt Window
-numberPromptWindow.Title=Darts Trainingsspiel - Ziffer Eingabe
+numberPromptWindow.Title=\ - Ziffer Eingabe
 numberPromptWindow.textField.amount=Anzahl an Triple-Treffern:
 # Keywords
 kw.score=Punktestand
