--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,5 +1,5 @@
-projectName=Darts Trainingsspiel
 version=3.0-pre1.2
+projectName=Darts Trainingsspiel
 # Launcher Window
 launcherWindow.Title=\ - Launcher
 # Texts
@@ -9,9 +9,16 @@ launcherWindow.text.languageSelection=Sprachauswahl
 # Buttons
 launcherWindow.button.challengeMode=Herausforderungsmodus
 launcherWindow.button.endlessMode=Endloser Modus
+# LogWindow
+logWindow.Title=\ - Log
+# Texts
+logWindow.text.prompt=Systemausgabe hier
+# Buttons
+logWindow.button.clear=Löschen
+logWindow.button.close=Schließen
 # Main Window
 gameWindow.Title=\ - Main
-# Text Fields
+# Texts
 mainWindow.textField.lost=Verloren
 # Buttons
 mainWindow.button.newGame=Neues Spiel
@@ -31,6 +38,7 @@ stdOut.reset=I: Setze Spiel zurück!
 # Small Errors
 sError.numberPrompt.amount=Anzahl an Triple-Treffern überprüfen!
 # Major Errors
+mError.log.open=E: Log konnte nicht geöffnet werden
 mError.numberPrompt.open=E: Ziffer Eingabe konnte nicht geöffnet werden
 # Fatal Errors
 fError.launcherWindow.resetFailed=F: Launcher-Fenster konnte nicht aktualisiert werden
