Log Update amendment
* fixed text
* Log now gets reset with locale change

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -3,7 +3,7 @@ projectName=Darts Trainingsspiel
 # Launcher Window
 launcherWindow.Title=\ - Launcher
 # Texts
-launcherWindow.text.title=Darts Trainingsspiel - Launcher
+launcherWindow.text.title=Darts Trainingsspiel
 launcherWindow.text.duration=Dauer:
 launcherWindow.text.languageSelection=Sprachauswahl
 # Buttons
