--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -22,6 +22,7 @@ gameWindow.Title=\ - Main
 mainWindow.textField.lost=Verloren
 # Buttons
 mainWindow.button.newGame=Neues Spiel
+mainWindow.button.startStopTimer=Starte/Stoppe Timer
 mainWindow.button.noHit=Kein Treffer
 mainWindow.button.oneHit=Ein Treffer
 mainWindow.button.twoHits=Zwei Treffer
