Migrated `NumberPrompt` into `GameController`
* made "could not open window" errors fatal

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -39,7 +39,8 @@ stdOut.reset=I: Setze Spiel zurück!
 # Small Errors
 sError.numberPrompt.amount=Anzahl an Triple-Treffern überprüfen!
 # Major Errors
-mError.log.open=E: Log konnte nicht geöffnet werden
-mError.numberPrompt.open=E: Ziffer Eingabe konnte nicht geöffnet werden
 # Fatal Errors
-fError.launcherWindow.resetFailed=F: Launcher-Fenster konnte nicht aktualisiert werden
+fError.launcherWindow.reset=F: Launcher-Fenster konnte nicht aktualisiert werden
+fError.launcherWindow.startGame=E: Spiel konnte nicht gestartet werden
+fError.log.open=E: Log konnte nicht geöffnet werden
+fError.numberPrompt.open=E: Ziffer Eingabe konnte nicht geöffnet werden
