--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,4 +1,4 @@
-version=3.0-pre2
+version=3.2
 projectName=Darts Trainingsspiel
 # Launcher Window
 launcherWindow.Title=\ - Launcher
@@ -19,7 +19,9 @@ logWindow.button.close=Schließen
 # Main Window
 gameWindow.Title=\ - Main
 # Texts
-mainWindow.textField.lost=Verloren
+mainWindow.textField.status.init=Drücke Start
+mainWindow.textField.status.paused=Pausiert
+mainWindow.textField.status.gameOver=Spiel vorbei
 # Buttons
 mainWindow.button.newGame=Neues Spiel
 mainWindow.button.startStopTimer=Starte/Stoppe Timer
@@ -31,6 +33,7 @@ mainWindow.button.threeHits=Drei Treffer
 numberPromptWindow.Title=\ - Ziffer Eingabe
 numberPromptWindow.textField.amount=Anzahl an Triple-Treffern:
 # Keywords
+kw.timer=Zeit:
 kw.score=Punktestand
 kw.highscore=Rekord
 # StdOut messages
