Challenge Mode update
+ added challenge mode logic
* extracted common parts of startSpecificGameMode into method `startGame`
* display correct window title
  * rename properties to more suitable name
* updated localisation

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,4 +1,4 @@
-version=3.2
+version=3.3
 projectName=Darts Trainingsspiel
 # Launcher Window
 launcherWindow.Title=\ - Launcher
@@ -6,9 +6,6 @@ launcherWindow.Title=\ - Launcher
 launcherWindow.text.title=Darts Trainingsspiel
 launcherWindow.text.duration=Dauer:
 launcherWindow.text.languageSelection=Sprachauswahl
-# Buttons
-launcherWindow.button.challengeMode=Herausforderungsmodus
-launcherWindow.button.endlessMode=Endloser Modus
 # LogWindow
 logWindow.Title=\ - Log
 # Texts
@@ -17,7 +14,8 @@ logWindow.text.prompt=Systemausgabe hier
 logWindow.button.clear=Löschen
 logWindow.button.close=Schließen
 # Main Window
-gameWindow.Title=\ - Main
+gameWindow.title.challengeMode=Herausforderungsmodus
+gameWindow.title.endlessMode=Endloser Modus
 # Texts
 mainWindow.textField.status.init=Drücke Start
 mainWindow.textField.status.paused=Pausiert
@@ -40,8 +38,10 @@ kw.highscore=Rekord
 stdOut.exit=I: Verlasse!
 stdOut.reset=I: Setze Spiel zurück!
 # Small Errors
+sError.launcherWindow.duration=Die Spieldauer ist keine Zahl oder liegt nicht im möglichen Bereich \n Der Wert muss im Bereich von 1 bis 60 liegen!
 sError.numberPrompt.amount=Anzahl an Triple-Treffern überprüfen!
 # Major Errors
+mError.mainWindow.timerOverflow=Timer-Überlauf
 # Fatal Errors
 fError.launcherWindow.reset=F: Launcher-Fenster konnte nicht aktualisiert werden
 fError.launcherWindow.startGame=E: Spiel konnte nicht gestartet werden
