Refined game start (code)
+ Challenge mode starts with "Enter" on "durationIn"
+ extracted method `setGameDuration`
* removed parameter from `startGame`
* renamed keys for easier access

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -14,8 +14,8 @@ logWindow.text.prompt=Systemausgabe hier
 logWindow.button.clear=Löschen
 logWindow.button.close=Schließen
 # Main Window
-gameWindow.title.challengeMode=Herausforderungsmodus
-gameWindow.title.endlessMode=Endloser Modus
+gameWindow.title.challenge=Herausforderungsmodus
+gameWindow.title.endless=Endloser Modus
 # Texts
 mainWindow.textField.status.init=Drücke Start
 mainWindow.textField.status.paused=Pausiert
