--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -6,8 +6,19 @@ launcherWindow.Title=\ - Launcher
 launcherWindow.text.title=Darts Trainingsspiel
 launcherWindow.text.duration=Dauer:
 launcherWindow.text.languageSelection=Sprachauswahl
+# Buttons
+launcherWindow.button.settings=Einstellungen
+launcherWindow.button.quit=Verlassen
+# Settings Window
+settingsWindow.title=Einstellungen
+# Texts
+settings.window.checkBox.showLog=Protokoll beim Spielstart anzeigen
+# Buttons
+settingsWindow.menuButton.unset=Nutze Systemstandard
+settingsWindow.button.save=Speichern
+settingsWindow.button.close=Schließen
 # LogWindow
-logWindow.Title=\ - Log
+logWindow.Title=\ - Protokoll
 # Texts
 logWindow.text.prompt=Systemausgabe hier
 # Buttons
@@ -38,7 +49,7 @@ kw.highscore=Rekord
 stdOut.exit=I: Verlasse!
 stdOut.reset=I: Setze Spiel zurück!
 # Small Errors
-sError.launcherWindow.duration=Die Spieldauer ist keine Zahl oder liegt nicht im möglichen Bereich \n Der Wert muss im Bereich von 1 bis 60 liegen!
+sError.duration=Die Spieldauer ist keine Zahl oder liegt nicht im möglichen Bereich \n Der Wert muss im Bereich von 1 bis 60 liegen!
 sError.numberPrompt.amount=Anzahl an Triple-Treffern überprüfen!
 # Major Errors
 mError.mainWindow.timerOverflow=Timer-Überlauf
