--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -12,6 +12,7 @@ launcherWindow.button.quit=Verlassen
 # Settings Window
 settingsWindow.title=Einstellungen
 # Texts
+settingsWindow.text.gameOverOnZero=Spielende bei null Punkten
 settings.window.checkBox.showLog=Protokoll beim Spielstart anzeigen
 # Buttons
 settingsWindow.menuButton.unset=Nutze Systemstandard
