* moving msg-identifiers into properties * fixed identifiers

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -47,15 +47,16 @@ kw.timer=Zeit:
 kw.score=Punktestand
 kw.highscore=Rekord
 # StdOut messages
-stdOut.exit=I: Verlasse!
 stdOut.reset=I: Setze Spiel zurück!
+stdOut.exit=I: Verlasse!
 # Small Errors
-sError.duration=Die Spieldauer ist keine Zahl oder liegt nicht im möglichen Bereich \n Der Wert muss im Bereich von 1 bis 60 liegen!
+sError.duration=E: Die Spieldauer ist keine Zahl oder liegt nicht im möglichen Bereich \n Der Wert muss im Bereich von 1 bis 60 liegen!
 sError.numberPrompt.amount=Anzahl an Triple-Treffern überprüfen!
 # Major Errors
-mError.mainWindow.timerOverflow=Timer-Überlauf
+mError.mainWindow.timerOverflow=E: Timer-Überlauf
+mError.JSONInterface.corruptSettingsFile=E: Die Einstellungsdatei ist beschädigt \n   Verschiebe beschädigten Datei nach "corruptSettings.json" und erstellen neue Datei
 # Fatal Errors
 fError.launcherWindow.reset=F: Launcher-Fenster konnte nicht aktualisiert werden
-fError.launcherWindow.startGame=E: Spiel konnte nicht gestartet werden
-fError.log.open=E: Log konnte nicht geöffnet werden
-fError.numberPrompt.open=E: Ziffer Eingabe konnte nicht geöffnet werden
+fError.launcherWindow.startGame=F: Spiel konnte nicht gestartet werden
+fError.log.open=F: Log konnte nicht geöffnet werden
+fError.numberPrompt.open=F: Ziffer Eingabe konnte nicht geöffnet werden
