+ added msg when timer is up

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -46,6 +46,7 @@ numberPromptWindow.textField.amount=Anzahl an Triple-Treffern:
 kw.timer=Zeit:
 kw.score=Punktestand
 kw.highscore=Rekord
+stdOut.timesUp=I: Timer ist abgelaufen
 # StdOut messages
 stdOut.reset=I: Setze Spiel zurück!
 stdOut.exit=I: Verlasse!
