* cleaned property files

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -1,30 +1,30 @@
 version=3.4
 projectName=Darts Trainingsspiel
+# Common
+# Texts
+cmn.text.duration=Dauer:
+cmn.text.languageSelection=Sprachauswahl
+# Buttons
+cmn.button.close=Schließen
 # Launcher Window
 launcherWindow.Title=\ - Launcher
 # Texts
-launcherWindow.text.title=Darts Trainingsspiel
-launcherWindow.text.duration=Dauer:
-launcherWindow.text.languageSelection=Sprachauswahl
 # Buttons
-launcherWindow.button.settings=Einstellungen
 launcherWindow.button.quit=Verlassen
 # Settings Window
 settingsWindow.title=Einstellungen
 # Texts
 settingsWindow.text.gameOverOnZero=Spielende bei null Punkten
-settings.window.checkBox.showLog=Protokoll beim Spielstart anzeigen
+settingsWindow.checkBox.showLog=Protokoll beim Spielstart anzeigen
 # Buttons
 settingsWindow.menuButton.unset=Nutze Systemstandard
 settingsWindow.button.save=Speichern
-settingsWindow.button.close=Schließen
 # LogWindow
 logWindow.Title=\ - Protokoll
 # Texts
 logWindow.text.prompt=Systemausgabe hier
 # Buttons
 logWindow.button.clear=Löschen
-logWindow.button.close=Schließen
 # Main Window
 gameWindow.title.challenge=Herausforderungsmodus
 gameWindow.title.endless=Endloser Modus
@@ -42,17 +42,17 @@ mainWindow.button.threeHits=Drei Treffer
 # Number Prompt Window
 numberPromptWindow.Title=\ - Ziffer Eingabe
 numberPromptWindow.textField.amount=Anzahl an Triple-Treffern:
+numberPromptWindow.amountErrorMsg=Anzahl an Triple-Treffern überprüfen!
 # Keywords
 kw.timer=Zeit:
 kw.score=Punktestand
 kw.highscore=Rekord
-stdOut.timesUp=I: Timer ist abgelaufen
 # StdOut messages
+stdOut.timesUp=I: Timer ist abgelaufen
 stdOut.reset=I: Setze Spiel zurück!
 stdOut.exit=I: Verlasse!
 # Small Errors
-sError.duration=E: Die Spieldauer ist keine Zahl oder liegt nicht im möglichen Bereich \n Der Wert muss im Bereich von 1 bis 60 liegen!
-sError.numberPrompt.amount=Anzahl an Triple-Treffern überprüfen!
+sError.duration=E: Die Spieldauer ist keine Zahl oder liegt nicht im möglichen Bereich \n   Der Wert muss im Bereich von 1 bis 60 liegen!
 # Major Errors
 mError.mainWindow.timerOverflow=E: Timer-Überlauf
 mError.JSONInterface.corruptSettingsFile=E: Die Einstellungsdatei ist beschädigt \n   Verschiebe beschädigten Datei nach "corruptSettings.json" und erstellen neue Datei
