+ added button to return to default settings

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -19,6 +19,7 @@ settingsWindow.checkBox.showLog=Protokoll beim Spielstart anzeigen
 # Buttons
 settingsWindow.menuButton.unset=Nutze Systemstandard
 settingsWindow.button.save=Speichern
+settingsWindow.button.resetToDefault=Standard
 # LogWindow
 logWindow.Title=\ - Protokoll
 # Texts
