* renamed `handleCorruption` method to `backupAndRecreate` * renamed `corruptSettings.json` target to `oldSettings.json` * renamed `reset()` to `resetToDefaultSettings()` + resetting the settings also triggers `backupAndRecreate` instead of simply overwriting of the old settings

--- a/src/main/resources/lang.properties
+++ b/src/main/resources/lang.properties
@@ -56,7 +56,7 @@ stdOut.exit=I: Verlasse!
 sError.duration=E: Die Spieldauer ist keine Zahl oder liegt nicht im möglichen Bereich \n   Der Wert muss im Bereich von 1 bis 60 liegen!
 # Major Errors
 mError.mainWindow.timerOverflow=E: Timer-Überlauf
-mError.JSONInterface.corruptSettingsFile=E: Die Einstellungsdatei ist beschädigt \n   Verschiebe beschädigten Datei nach "corruptSettings.json" und erstellen neue Datei
+mError.JSONInterface.corruptSettingsFile=E: Die Einstellungsdatei ist beschädigt \n   Verschiebe beschädigten Datei nach "oldSettings.json" und erstellen neue Datei
 # Fatal Errors
 fError.launcherWindow.reset=F: Launcher-Fenster konnte nicht aktualisiert werden
 fError.launcherWindow.startGame=F: Spiel konnte nicht gestartet werden
